kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airlines
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    run: airlines-demo
