kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    certmanager.k8s.io/cluster-issuer: acme-dns-issuer
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: r53dns-prod
    kubernetes.io/tls-acme: "true"

    external-dns.alpha.kubernetes.io/alias: "true"

    external-dns.alpha.kubernetes.io/target: external-nlb.piglet.cwps.io
    kubernetes.io/ingress.class: nginx-external
spec:
  rules:
  - host: play.piglet.cwps.io
    http:
      paths:
      - backend:
          serviceName: kuard
          servicePort: 80
        path: /
  tls:
  - hosts:
      - "play.piglet.cwps.io"
    secretName: play.piglet.cwps.io-tls
